# project_ic

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
configs/: base.yaml
deployment/api/: README.md  main.py
docs/: architecture.md  data_schema.md  image_pipeline.md  model_card.md  sample_labs.csv  spec.md  training.md
scripts/: generate_synthetic_dataset.py  generate_synthetic_images.py  run_fusion_inference.py  run_image_inference.py  run_inference.py  run_local_demo.py  train_all.py  train_image_baseline.py  train_tabular.py
src/ic/: __init__.py  chat.py  dataset.py  fusion.py  fusion_inference.py  image_classifier.py  image_dataset.py  image_features.py  model_io.py  pipeline.py  report_parser.py  types.py
web/: .env.example  package-lock.json  package.json  tsconfig.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/api/analyze/: route.ts
web/app/api/chat/: route.ts
web/app/chat/: page.tsx
web/app/upload/: page.tsx
web/lib/: analyze.ts  chat.ts  gemini.ts  ocr.ts  openai.ts  openrouter.ts  pythonInference.ts  reportParser.ts  types.ts
